   buffer_len will be hit much earlier than it used to be. Use ansi()
   with wisdom! [GM]
 * @edit no longer shows the full value of attributes which aren't edited,
   it just shows that they are unchanged. Suggested by Minion. [MG]
 * @mail now shows the dbref of the sender for mail from non-players.
   Suggested by Minion. [MG]

Fixes:
 * %$-subs didn't work inside @switch's default case. Patch by Covenent.
 * %0-9 were being overridden when using /inline/localize. Patch by Covenent.
 * You couldn't @chat on open channels. Reported by Padraic. [MG]
 * Win32 compile fixes by Daniel Powell. [MG]
 * The Open_Anywhere power didn't fully work as intended. Patch by Covenent.
 * regrab*() functions removed ansi. Reported by Covenent. [MG]
 * munge() didn't play nice with ansi. [MG]
 * @shutdown/reboot would cause hang unencrypted sockets for players with
   both SSL and normal connections. Reported by Padraic. [SW]
 * @chatformat sometimes received the player's name without accents by
   mistake. Reported by Sketch. [MG]

Functions:
 * Restrictions for the beep() function can now be modified with @function.
   Suggested by Paige. [MG]

Version 1.8.4 patchlevel 4                                 May 05,  2011

Major changes:
 * Q-registers are no longer limited to single characters. setq(name,joe)
   and r(name) or %q<name>! Limited by max_named_qregs. [GM]
 * Ident lookup and associated config options have been removed. Between
   lack of people running ident servers, NAT, and issues in the code, it
   rarely got results. [SW].

Hardcode:
 * global_eval_context has been removed. The BQUE, EVAL_CONTEXT and PE_Info
   structs have been removed, replaced with MQUE and NEW_PE_INFO. Shouldn't
   affect players, but will affect hardcode hacks. See HACKING.184 for more
   info. [MG]
 * Q-registers are now kept in a PE_REGS stack. See HACKING.184 for more
   information. This will be used for other registers. [GM]